spartanize the code - Fixes #41